Adding comment posting Adding some documentation
